couriers/k8_deploy/gateway/gateway.yaml
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: traefik-courier-gateway
# spec:
#   gatewayClassName: traefik-gateway
#   listeners:
#   - name: http
#     protocol: HTTP
#     port: 8080
#     allowedRoutes:
#       namespaces:
#         from: All
      
  # - name: trackins-ws
  #   protocol: TCP
  #   port: 9000
  #   allowedRoutes:
  #     kinds:
  #     - kind: TCPRoute


  # - protocol: https
  #   port: 443
  #   name: https
  #   allowedRoutes:
  #     namespaces:
  #       from: All

# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: courier-tracking-route
#   namespace: default
# spec:
#   parentRefs:
#     - name: traefik-courier-gateway
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /tracking
#       filters:
#       - type: URLRewrite
#         urlRewrite:
#           path:
#             type: ReplacePrefixMatch
#             replacePrefixMatch: ""
#   - backendRefs:
#     - name: courier-tracking
#       port: 8080




apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
